--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -45,11 +45,18 @@ nav a{
 /* header related styles */
 .headerr{
   background: #FFF8F3;
+  background-image: url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .banner{
-  padding: 30px 30px 30px 150px;
+  padding: 30px 30px 0px 150px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+.banner-content{
+  max-width: 500;
 }
 .downloadd {
   background: orangered;
@@ -59,6 +66,7 @@ nav a{
   font-size: 20px;
   font-weight: 600;
   padding: 15px 35px;
+  margin-top: 20px;
 }
 .contactt{
   background: orangered;
@@ -68,7 +76,27 @@ nav a{
   font-size: 20px;
   font-weight: 600;
   padding: 15px 35px;
+  margin-top: 20px;
 }
 .banner .profile-pic{
 width: 500px;
+}
+.banner-greeting{
+  font-size: 45px;
+  margin-bottom: 0px;
+  color: #474747;
+}
+.banner-title{
+  font-weight: 700;
+  font-size: 85px;
+  margin-top: 5px;
+  margin-bottom: 20px;
+
+}
+.banner-des{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 25px;
+  color: #474747;
+  
 }
