--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -100,3 +100,30 @@ width: 500px;
   color: #474747;
   
 }
+
+
+
+
+
+/* Main section design */
+
+/* about section design */
+.about{
+padding: 130px ;
+border-radius: 10px;
+background: #FFF8F3;
+margin:130px ;
+}
+.section-title{
+  font-size: 45px;
+  font-weight: 700;
+  color: #181818;
+  text-align: center;
+  
+}
+
+.section-des{
+color: #757575;
+font-size: 18px;
+text-align: center;
+}
