added about section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -127,3 +127,15 @@ color: #757575;
 font-size: 18px;
 text-align: center;
 }
+main{
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
+.about-info-container{
+  display: flex;
+  justify-content: space-around;
+}
+.about-info{
+  text-align: center;
+}
