--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -131,11 +131,48 @@ main{
   max-width: 1500px;
   margin: 0 auto;
 }
-
+main section{
+  margin-top: 130px;
+}
 .about-info-container{
   display: flex;
   justify-content: space-around;
 }
 .about-info{
   text-align: center;
+}
+
+/* skill releted styles */
+
+#what-i-do-des{
+  padding: 30px 150px;
+  color: #757575;
+}
+.skill-container{
+  display: flex;
+  /* justify-content: space-around; */
+  gap: 24px;
+}
+.skill{
+  /* text-align: center; */
+  padding: 30px;
+  border-radius: 5px;
+  background: #FFF;
+  box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+      
+}
+.skill-des{
+text-align: justify;
+color: #757575;
+}
+
+/* Resume section styles */
+
+.resume-container{
+  /* display: flex; */
+}
+.resume-column-title{
+color: #474747;
+font-size: 30px;
+font-weight: 700;
 }
